# nn-slam-benchmark

./: .gitignore  .gitlab-ci.yml  README.md  bench_feature_detectors.py  bench_feature_matchers.py  bench_features.py  bench_vpr.py  environment.yml  export_onnx.py  export_torchscript.py  pyproject.toml  requirements-orange.txt  requirements.txt
.github/wokrflows/: ci.yml
.github/workflows/: ci.yml
aero_vloc/: __init__.py  benchmarking.py  localization_pipeline.py  retrieval_system.py  utils.py
aero_vloc/dataset/: __init__.py  dataset.py
aero_vloc/feature_detectors/: __init__.py
aero_vloc/feature_detectors/superpoint_rknn/: conversion_model.py  inference_class.py  model.py
aero_vloc/feature_matchers/: __init__.py
aero_vloc/feature_matchers/lighterglue/: __init__.py  lighterglue.py
aero_vloc/feature_matchers/sela/: __init__.py  sela.py
aero_vloc/feature_matchers/superglue/: __init__.py  superglue.py
aero_vloc/metrics/: __init__.py  reference_recall.py
aero_vloc/model_conversion/: rk3588.py  rknn.py
aero_vloc/vpr_systems/: __init__.py  vpr_system.py
aero_vloc/vpr_systems/anyloc/: __init__.py
aero_vloc/vpr_systems/cosplace/: __init__.py  cosplace.py
aero_vloc/vpr_systems/mixvpr/: mixvpr.py
doc/model-conversion/: rknn.md
environments/orange-pi5/: environment.yml  setup_env.sh
environments/orin-nx-jp61/: requirements.txt  setup_env.sh
nnsb/: __init__.py  benchmarking.py  evaluation.py  localization_pipeline.py  method.py  retrieval_system.py  utils.py
nnsb/backend/: __init__.py  backend.py  default.py  onnx.py  rknn.py  tensorrt.py  torch.py  torchscript.py
nnsb/dataset/: dataset.py
nnsb/feature_detectors/: __init__.py  feature_detector.py
nnsb/feature_matchers/: __init__.py  feature_matcher.py
nnsb/index_searchers/: __init__.py  faiss_searcher.py  index_searcher.py
nnsb/metrics/: reference_recall.py
nnsb/model_conversion/: __init__.py  onnx.py  rknn.py  tensorrt.py  torchscript.py
nnsb/runner/: onnx.py  runner.py
nnsb/vpr_systems/: __init__.py  vpr_system.py
notebooks/: feature_bench_visualization.ipynb  lightglue.ipynb  measurements.ipynb  onnx_to_trt.sh  pkl_to_json.py  quant_feat_detectors.py  quant_feat_matchers.py  quant_vpr_systems.py
scipts/: convert_all_models.py  convert_all_models_to_rknn.py  convert_vpr_systems_to_rknn.py  quant_feat_detectors.py  quant_feat_matchers.py  quant_vpr_systems.py  quant_vpr_systems2.py  tensorrt_worker.py
tests/: utils.py
tests/index_searchers/: test_faiss_searcher.py
tests/metrics/: test_recall.py  test_reference_recall.py
(+60 files in other folders)
