[project]
name = "nn-slam-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops==0.7.0",
    "faiss-cpu==1.7.4",
    "fast_pytorch_kmeans==0.2.0.1",
    "geopy==2.4.0",
    "numpy==1.26.1",
    "opencv_python==4.8.1.78",
    "Pillow==10.1.0",
    "prettytable==3.9.0",
    "pytest==7.2.2",
    "pytorch_lightning==2.1.0",
    "pytorch-metric-learning==2.4.1",
    "Requests==2.31.0",
    "scikit_learn==1.3.2",
    "torch==2.1.0",
    "torchvision==0.16.0",
    "tqdm==4.66.1",
    "gdown>=5.2.0",
    "euporie>=2.8.4",
    "onnx>=1.14.1",
    "onnxruntime>=1.16.0",
]

[dependency-groups]
rknn-host = ["rknn-toolkit2"]
rknn-board = ["rknn-toolkit-lite2"]

[tool.uv.sources]
rknn-toolkit2 = [ 
    {url = "https://raw.githubusercontent.com/airockchip/rknn-toolkit2/a8dd54d41e92c95b4f95780ed0534362b2c98b92/rknn-toolkit2/packages/x86_64/rknn_toolkit2-2.3.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl", marker = "python_version == '3.10'"},
    # {url = "https://raw.githubusercontent.com/airockchip/rknn-toolkit2/a8dd54d41e92c95b4f95780ed0534362b2c98b92/rknn-toolkit2/packages/x86_64/rknn_toolkit2-2.3.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl", marker = "python_version == '3.11'"},
    # {url = "https://raw.githubusercontent.com/airockchip/rknn-toolkit2/a8dd54d41e92c95b4f95780ed0534362b2c98b92/rknn-toolkit2/packages/x86_64/rknn_toolkit2-2.3.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl", marker = "python_version == '3.12'"}
]
rknn-toolkit-lite2 = [
    {url = "https://raw.githubusercontent.com/airockchip/rknn-toolkit2/a8dd54d41e92c95b4f95780ed0534362b2c98b92/rknn-toolkit-lite2/packages/rknn_toolkit_lite2-2.3.0-cp310-cp310-manylinux_2_17_aarch64.manylinux2014_aarch64.whl", marker = "python_version == '3.10'"},
    # {url = "https://raw.githubusercontent.com/airockchip/rknn-toolkit2/a8dd54d41e92c95b4f95780ed0534362b2c98b92/rknn-toolkit-lite2/packages/rknn_toolkit_lite2-2.3.0-cp311-cp311-manylinux_2_17_aarch64.manylinux2014_aarch64.whl", marker = "python_version == '3.11'"},
    # {url = "https://raw.githubusercontent.com/airockchip/rknn-toolkit2/a8dd54d41e92c95b4f95780ed0534362b2c98b92/rknn-toolkit-lite2/packages/rknn_toolkit_lite2-2.3.0-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl", marker = "python_version == '3.12'"},
]

[tool.pytest.ini_options]
pythonpath = "."
